# inpuls

./: INSTALL.md  README.md  auswertung_fetchreach.py  batch.py  libeval.py  requirements-opcua.txt  requirements.txt  setup.cfg  visualize_latent.py
experiments/box2d_arm_example/: hyperparams.py
experiments/gym_ant_lqr/: hyperparams.py
experiments/gym_fetchpush_lqr/: hyperparams.py
experiments/gym_fetchreach_lqr/: hyperparams.py
experiments/gym_fetchreach_mdgps/: hyperparams.py
experiments/gym_fetchreach_srmdgps/: hyperparams.py
experiments/gym_halfcheetah_lqr/: hyperparams.py
experiments/gym_halfcheetah_rfgps/: hyperparams.py
experiments/gym_peg_lqr/: hyperparams.py
experiments/gym_peg_mdgps/: hyperparams.py
experiments/gym_standup_rfgps/: hyperparams.py
experiments/opcua/: hyperparams.py
experiments/opcua/data_files/: ctr_00.npz  ctr_01.npz  dyn_00.npz  dyn_01.npz  plot_dynamics_m0-00.npz  plot_dynamics_m0-01.npz  plot_pol_lqr-m0-00.npz  plot_pol_lqr-m0-01.npz  samples_00.npz  samples_01.npz  samples_lqr-static_00.npz  samples_lqr-static_01.npz  timers.csv
python/gps/: dynamics_test.py  evaluate_policy_samples.py  gps_main.py  lqr_test.py  main.py  read_template.py  test_gen.py  trajectory_visualization.py
python/gps/agent/: agent.py  config.py
python/gps/algorithm/: algorithm.py  algorithm_NN.py  algorithm_badmm.py  algorithm_mdgps.py  algorithm_rfgps.py  algorithm_traj_opt.py  algorithm_utils.py  config.py
python/gps/doc/: dynamics_doc.html  dynamics_doc.md  lqr_backward_doc.html  lqr_backward_doc.md  (+2 more)
src/gps_agent_pkg/: CMakeLists.txt  gps_agent_pkg.cbp
src/gps_agent_pkg/gtest/: gtest.cbp
src/gps_agent_pkg/include/gps/proto/: gps.pb.cc  gps.pb.h
src/gps_agent_pkg/include/gps_agent_pkg/: armplugin.h  controller.h  jacoarmplugin.h  robotplugin.h  sensor.h  trialcontroller.h
src/gps_agent_pkg/src/: armplugin.cpp  jacoarmplugin.cpp  positioncontroller.cpp  robotplugin.cpp  sample.cpp  tfcontroller.cpp  trialcontroller.cpp
(+53 files in other folders)
